--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week 1</title>
     <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
-	<script src="script.js"></script>
+  <script src="script.js"></script>
+	<p>Hello everyone! My name is <script>document.getElementById("myFullName").innerHTML = myFirstName + " " + myLastName;</script><span id="myFullName"></span> and I have been a student at Seattle Central for <script>document.getElementById("myYearAtCentral").innerHTML = myYearOfStud;</script><span id="myYearAtCentral"></span> year.  My goal after finishing my program is <script>document.getElementById("myFuturePlan").innerHTML = myGoal</script><span id="myFuturePlan"></span></p>
   </body>
 </html>
