--- a/web/week-1.html
+++ b/web/week-1.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week 1</title>
     <link rel="stylesheet" href="/web/css/style.css">
-    <script type="text/javascript" src="/web/js/week-1.js"></script>
+    <script src="/web/js/week-1.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="/web/js/week-1.js">populatePage();</script>
     <div class="wrapper">
- 	    <p>Hello everyone! My name is <span id="myFullName"></span> and I am nearing the end of my <span id="myYearOfStudy"></span> in the Web Development program at Seattle Central. Upon completion my plan is <span id="myGoal"></span></p>
-      <h1>I'LL NEVER KNOW BECAUSE I CAN'T GET THIS BASIC !@#$%^& SCRIPT TO WORK PROPERLY.</h1>
+      <p>Hello everyone! My name is <script>document.write("fullName");</script> and I am nearing the end of my <script>document.write("yearOfStudy");</script> in the Web Development program at Seattle Central. Upon completion my plan is <script>document.write("goal");</script></p>
     </div>  
-</body>
+  </body>
 </html>
