--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,14 @@
-/// <reference path="week-1.js" />
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Week 1</title>
+    <title>JavaScript 1 - Assignments</title>
     <link rel="stylesheet" href="/web/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   </head>
   <body>
-    <div class="wrapper">
- 	   
-    </div>  
-</body>
+  
+  </body>
 </html>
