--- a/web/week-1.html
+++ b/web/week-1.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <p>Hello everyone! My name is <script>document.write("fullName");</script> and I am nearing the end of my <script>document.write("yearOfStudy");</script> in the Web Development program at Seattle Central. Upon completion my plan is <script>document.write("goal");</script></p>
+      <p>Hello everyone! My name is <script>document.write(fullName);</script> and I am nearing the end of my <script>document.write(yearOfStudy);</script> in the Web Development program at Seattle Central. Upon completion my plan is <script>document.write(goal);</script></p>
     </div>  
   </body>
 </html>
