--- a/web/hw1.html
+++ b/web/hw1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week 1</title>
     <link rel="stylesheet" href="/web/css/style.css">
-    <script src="/web/js/week-1.js"></script>
+    <script src="/web/js/hw1.js"></script>
   </head>
   <body>
     <div class="wrapper">
