--- a/web/hw1.html
+++ b/web/hw1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Week 1</title>
+    <title>Week 1 - Assignment</title>
     <link rel="stylesheet" href="/web/css/style.css">
     <script src="/web/js/hw1.js"></script>
   </head>
