--- a/www/hw1.html
+++ b/www/hw1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week 1 - Assignment</title>
-    <link rel="stylesheet" href="/web/css/style.css">
-    <script src="/web/js/hw1.js"></script>
+    <link rel="stylesheet" href="/www/css/style.css">
+    <script src="/www/js/hw1.js"></script>
   </head>
   <body>
     <div class="wrapper">
